# steam-download-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
steam_monitor/: config.py  container.py  errors.py  finder.py  game_finder.py  main.py  models.py  monitor.py  parser.py
tests/: test_config.py  test_container.py  test_errors.py  test_finder.py  test_game_finder.py  test_models.py  test_monitor.py  test_parser.py
