[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-download-monitor"
version = "0.1.0"
authors = [{ name = "Gleb" }]
description = "Monitor for Steam downloads"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["watchdog"]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest", "pytest-cov"]

[project.scripts]
steam-monitor = "steam_monitor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["steam_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-config --tb=short"